# omake

./: .gitignore  README.rst  dune-project  omake.opam  omake.opam.locked
.github/workflows/: workflow.yml
examples/hello/: omake
lib/: dune
test/: dune
